--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <br>
                 <br>
                 <h2>Good luck and have fun!</h2>
-            </div>git push -u origin master
+            </div>
             <div class='input'>
                 <h2>Please make a guess!</h2>
                 <h2>????</h2>
